Final version presented at NMQC Berlin

--- a/conclusions.tex
+++ b/conclusions.tex
@@ -15,10 +15,9 @@
 \textbf{Future work}
 \begin{itemize}
 \item Add Spin-Dipole contribution to HFCC
-\item XCFun update and spin-polarized DFT
-\item New initial guess to reach transition metals
-\item Benchmark basis sets
-\item Benchmark density functionals
+\item Implement the full HSF operator
+\item Generate initial guess to reach transition metals
+\item Benchmark basis sets and density functionals
 \end{itemize}
 \end{frame}
 
