--- a/talk.bib
+++ b/talk.bib
@@ -14,3 +14,19 @@ year  ="1966",
 volume  ="21, 1358",
 }
 
+@article{HillerSucherFeinberg_1978,
+author ="J. Hiller and J. Sucher and G. Feinberg",
+title  ="",
+journal  ="Phys. Rev. A",
+year  ="1978",
+volume  ="18, 6",
+}
+
+@article{RassolovChipman_1996,
+author ="V. A. Rassolov and D. M. Chipman",
+title  ="",
+journal  ="J. Chem. Phys.",
+year  ="1996",
+volume  ="105, (4)",
+}
+
