--- a/nemo.tex
+++ b/nemo.tex
@@ -1,6 +1,5 @@
 \begin{frame}
 \frametitle{Regularized potential}
-\scriptsize
 
 Extracting an \emph{analytical} cusp from the wave function
 \footcite{Seelig_1966}$^,$\footcite{Bischoff_2014a}
@@ -24,7 +23,6 @@ Extracting an \emph{analytical} cusp from the wave function
 
 \begin{frame}
 \frametitle{Regularized potential}
-\scriptsize
 \centering
 
 \textbf{Hartree-Fock equations}
@@ -154,7 +152,6 @@ Extracting an \emph{analytical} cusp from the wave function
 \begin{frame}
 \frametitle{One-electron system}
 \centering
-\scriptsize
 
 \textbf{Hydrogen atom}
 \begin{equation}
@@ -197,7 +194,7 @@ Extracting an \emph{analytical} cusp from the wave function
 \multicolumn{1}{l}{Error}&
 \multicolumn{1}{c}{$\phi(r_1)$}&
 \multicolumn{1}{l}{Error}\\
-\hline                        
+\hline
 \hspace{10mm}\ &\hspace{20mm}\     &\hspace{15mm}\  &\hspace{20mm}\      &\hspace{10mm}\  \\
                &                   &                &                    &                \\
                &                   &                &                    &                \\
@@ -237,9 +234,9 @@ $r_0$ at the nucleus, $r_1$ at a random point away from the nucleus
 \multicolumn{1}{l}{Error}&
 \multicolumn{1}{c}{$\phi(r_1)$}&
 \multicolumn{1}{l}{Error}\\
-\hline                        
+\hline
 \hspace{10mm}\ &\hspace{20mm}\     &\hspace{15mm}\  &\hspace{20mm}\      &\hspace{10mm}\  \\
-\multicolumn{5}{c}{R=Identity}\\                    
+\multicolumn{5}{c}{R=Identity}\\
  MW4           &0.5\red{72 116 507}&   \red{7.9e-03}&0.474 3\red{87 750} & \green{7.6e-05}\\
  MW5           &0.56\red{6 687 228}&   \red{2.4e-03}&0.474 46\red{8 244} & \green{4.4e-06}\\
  MW6           &0.56\red{5 279 010}&   \red{1.0e-03}&0.474 464 \red{272} & \green{5.0e-07}\\
@@ -277,9 +274,9 @@ $r_0$ at the nucleus, $r_1$ at a random point away from the nucleus
 \multicolumn{1}{l}{Error}&
 \multicolumn{1}{c}{$\phi(r_1)$}&
 \multicolumn{1}{l}{Error}\\
-\hline                        
+\hline
 \hspace{10mm}\ &\hspace{20mm}\     &\hspace{15mm}\  &\hspace{20mm}\      &\hspace{10mm}\  \\
-\multicolumn{5}{c}{R=Identity}\\                    
+\multicolumn{5}{c}{R=Identity}\\
  MW4           &0.5\red{72 116 507}&   \red{7.9e-03}&0.474 3\red{87 750} & \green{7.6e-05}\\
  MW5           &0.56\red{6 687 228}&   \red{2.4e-03}&0.474 46\red{8 244} & \green{4.4e-06}\\
  MW6           &0.56\red{5 279 010}&   \red{1.0e-03}&0.474 464 \red{272} & \green{5.0e-07}\\
@@ -304,8 +301,7 @@ $r_0$ at the nucleus, $r_1$ at a random point away from the nucleus
 \end{frame}
 
 \begin{frame}
-\frametitle{Many-electron systems}
-\scriptsize
+\frametitle{Extension to more electrons}
 \centering
 \textbf{All orbitals share the same correlation factor}
 \begin{equation}
@@ -313,20 +309,83 @@ $r_0$ at the nucleus, $r_1$ at a random point away from the nucleus
     \phi_i(r) = R(r) F_i(r)
 \end{equation}
 
-\vspace{10mm}
-
-\textbf{All nuclei are combined into one correlation factor}
-\begin{equation}
-    \nonumber
-    R(r) = \prod_I R_I(r - r_I)
-\end{equation}
-
 \end{frame}
 
+%\begin{frame}
+%\frametitle{Many-electron systems}
+%\centering
+%\begin{table}
+%\textbf{Spin densities of the Fluorine atom (Unrestricted Hartree-Fock)}
+%\begin{tabular}{crrr}
+%\hline
+%\hline
+%\multicolumn{1}{c}{\textbf{Precision}}&
+%\multicolumn{1}{c}{$\rho^\alpha(r_0)$}&
+%\multicolumn{1}{c}{$\rho^\beta(r_0)$}&
+%\multicolumn{1}{c}{$\rho^{\alpha-\beta}(r_0)$}\\
+%\hline
+%\hspace{10mm}\     & \hspace{20mm}\     & \hspace{20mm}\     & \hspace{15mm}\ \\
+%                   &                    &                    &                \\
+%                   &                    &                    &                \\
+%                   &                    &                    &                \\
+%                   &                    &                    &                \\
+%                   &                    &                    &                \\
+%                   &                    &                    &                \\
+%                   &                    &                    &                \\
+%                   &                    &                    &                \\
+%                   &                    &                    &                \\
+%                   &                    &                    &                \\
+%                   &                    &                    &                \\
+%                   &                    &                    &                \\
+%                   &                    &                    &                \\
+%                   &                    &                    &                \\
+%\hline
+%\hline
+%\end{tabular}
+%\end{table}
+%\tiny
+%$r_0$ at the nucleus
+%\end{frame}
+%
+%\begin{frame}
+%\frametitle{Many-electron systems}
+%\centering
+%\begin{table}
+%\textbf{Spin densities of the Fluorine atom (Unrestricted Hartree-Fock)}
+%\begin{tabular}{crrr}
+%\hline
+%\hline
+%\multicolumn{1}{c}{\textbf{Precision}}&
+%\multicolumn{1}{c}{$\rho^\alpha(r_0)$}&
+%\multicolumn{1}{c}{$\rho^\beta(r_0)$}&
+%\multicolumn{1}{c}{$\rho^{\alpha-\beta}(r_0)$}\\
+%\hline
+%\hspace{10mm}\     & \hspace{20mm}\     & \hspace{20mm}\     & \hspace{15mm}\ \\
+%\multicolumn{4}{c}{R = Identity}\\
+%               MW4 & 22\red{7.422 438}  & 22\red{7.286 520}  & 0.1\red{35 917}\\
+%               MW5 & 22\red{5.108 976}  & 22\red{4.978 719}  & 0.13\red{0 256}\\
+%               MW6 & 224.\red{595 243}  & 224.\red{464 582}  & 0.13\red{0 660}\\
+%               MW7 & 224.\red{339 158}  & 224.\red{213 024}  & 0.12\red{6 134}\\
+%               MW8 & 224.2\red{14 420}  & 224.0\red{89 374}  & 0.125 \red{046}\\
+%                   &                    &                    &                \\
+%                   &                    &                    &                \\
+%                   &                    &                    &                \\
+%                   &                    &                    &                \\
+%                   &                    &                    &                \\
+%                   &                    &                    &                \\
+%                   &                    &                    &                \\
+%                   &                    &                    &                \\
+%\hline
+%\hline
+%\end{tabular}
+%\end{table}
+%\tiny
+%$r_0$ at the nucleus
+%\end{frame}
+
 \begin{frame}
-\frametitle{Many-electron systems}
+\frametitle{Extension to more electrons}
 \centering
-\scriptsize
 \begin{table}
 \textbf{Spin densities of the Fluorine atom (Unrestricted Hartree-Fock)}
 \begin{tabular}{crrr}
@@ -336,81 +395,7 @@ $r_0$ at the nucleus, $r_1$ at a random point away from the nucleus
 \multicolumn{1}{c}{$\rho^\alpha(r_0)$}&
 \multicolumn{1}{c}{$\rho^\beta(r_0)$}&
 \multicolumn{1}{c}{$\rho^{\alpha-\beta}(r_0)$}\\
-\hline                        
-\hspace{10mm}\     & \hspace{20mm}\     & \hspace{20mm}\     & \hspace{15mm}\ \\
-                   &                    &                    &                \\
-                   &                    &                    &                \\
-                   &                    &                    &                \\
-                   &                    &                    &                \\
-                   &                    &                    &                \\
-                   &                    &                    &                \\
-                   &                    &                    &                \\
-                   &                    &                    &                \\
-                   &                    &                    &                \\
-                   &                    &                    &                \\
-                   &                    &                    &                \\
-                   &                    &                    &                \\
-                   &                    &                    &                \\
-                   &                    &                    &                \\
 \hline
-\hline
-\end{tabular}
-\end{table}
-\tiny
-$r_0$ at the nucleus
-\end{frame}
-
-\begin{frame}
-\frametitle{Many-electron systems}
-\centering
-\scriptsize
-\begin{table}
-\textbf{Spin densities of the Fluorine atom (Unrestricted Hartree-Fock)}
-\begin{tabular}{crrr}
-\hline
-\hline
-\multicolumn{1}{c}{\textbf{Precision}}&
-\multicolumn{1}{c}{$\rho^\alpha(r_0)$}&
-\multicolumn{1}{c}{$\rho^\beta(r_0)$}&
-\multicolumn{1}{c}{$\rho^{\alpha-\beta}(r_0)$}\\
-\hline                        
-\hspace{10mm}\     & \hspace{20mm}\     & \hspace{20mm}\     & \hspace{15mm}\ \\
-\multicolumn{4}{c}{R = Identity}\\
-               MW4 & 22\red{7.422 438}  & 22\red{7.286 520}  & 0.1\red{35 917}\\
-               MW5 & 22\red{5.108 976}  & 22\red{4.978 719}  & 0.13\red{0 256}\\
-               MW6 & 224.\red{595 243}  & 224.\red{464 582}  & 0.13\red{0 660}\\
-               MW7 & 224.\red{339 158}  & 224.\red{213 024}  & 0.12\red{6 134}\\
-               MW8 & 224.2\red{14 420}  & 224.0\red{89 374}  & 0.125 \red{046}\\
-                   &                    &                    &                \\
-                   &                    &                    &                \\
-                   &                    &                    &                \\
-                   &                    &                    &                \\
-                   &                    &                    &                \\
-                   &                    &                    &                \\
-                   &                    &                    &                \\
-                   &                    &                    &                \\
-\hline
-\hline
-\end{tabular}
-\end{table}
-\tiny
-$r_0$ at the nucleus
-\end{frame}
-
-\begin{frame}
-\frametitle{Many-electron systems}
-\centering
-\scriptsize
-\begin{table}
-\textbf{Spin densities of the Fluorine atom (Unrestricted Hartree-Fock)}
-\begin{tabular}{crrr}
-\hline
-\hline
-\multicolumn{1}{c}{\textbf{Precision}}&
-\multicolumn{1}{c}{$\rho^\alpha(r_0)$}&
-\multicolumn{1}{c}{$\rho^\beta(r_0)$}&
-\multicolumn{1}{c}{$\rho^{\alpha-\beta}(r_0)$}\\
-\hline                        
 \hspace{10mm}\     & \hspace{20mm}\     & \hspace{20mm}\     & \hspace{15mm}\ \\
 \multicolumn{4}{c}{R = Identity}\\
                MW4 & 22\red{7.422 438}  & 22\red{7.286 520}  & 0.1\red{35 917}\\
@@ -435,9 +420,8 @@ $r_0$ at the nucleus
 \end{frame}
 
 \begin{frame}
-\frametitle{Many-electron systems}
+\frametitle{Extension to more electrons}
 \centering
-\scriptsize
 \textbf{HFCC of the Fluorine atom (Unrestricted Hartree-Fock)}
 \begin{table}
 \begin{tabular}{rrrr}
@@ -447,7 +431,7 @@ $r_0$ at the nucleus
 \multicolumn{1}{c}{A$_{FC}$ (MHz)}&
 \multicolumn{1}{r}{\textbf{GTO}}&
 \multicolumn{1}{c}{A$_{FC}$ (MHz)}\\
-\hline                        
+\hline
   cc-pVDZ      & \red{831.451}  &  cc-pCVDZ      & \red{ 53.566}  \\
   cc-pVTZ      & \red{  1.981}  &  cc-pCVTZ      & \red{429.481}  \\
   cc-pVQZ      & \red{144.487}  &  cc-pCVQZ      & 5\red{09.140}  \\
@@ -478,9 +462,8 @@ MWx: Multiwavelets with precision $\epsilon=10^{-x}$
 
 
 \begin{frame}
-\frametitle{Many-electron systems}
+\frametitle{Extension to more electrons}
 \centering
-\scriptsize
 \textbf{HFCC of the Fluorine atom (Unrestricted Hartree-Fock)}
 \begin{table}
 \begin{tabular}{rrrr}
@@ -490,7 +473,7 @@ MWx: Multiwavelets with precision $\epsilon=10^{-x}$
 \multicolumn{1}{c}{A$_{FC}$ (MHz)}&
 \multicolumn{1}{r}{\textbf{GTO}}&
 \multicolumn{1}{c}{A$_{FC}$ (MHz)}\\
-\hline                        
+\hline
   cc-pVDZ      & \red{831.451}  &  cc-pCVDZ      & \red{ 53.566}  \\
   cc-pVTZ      & \red{  1.981}  &  cc-pCVTZ      & \red{429.481}  \\
   cc-pVQZ      & \red{144.487}  &  cc-pCVQZ      & 5\red{09.140}  \\
@@ -519,40 +502,104 @@ GTO calculations with ORCA\\
 MWx: Multiwavelets with precision $\epsilon=10^{-x}$
 \end{frame}
 
-%\begin{frame}
-%\frametitle{Extension to molecules}
-%\centering
-%\scriptsize
-%\textbf{HFCC of the CN molecule (Unrestricted Hartree-Fock)}
-%\begin{table}
-%\begin{tabular}{rrrr}
-%\hline
-%\hline
-%\multicolumn{1}{r}{\textbf{GTO}}&
-%\multicolumn{1}{c}{A$_{FC}$ (MHz)}&
-%\multicolumn{1}{r}{\textbf{MRA}}&
-%\multicolumn{1}{c}{A$_{FC}$ (MHz)}\\
-%\hline
-%\hspace{15mm}\  &\hspace{15mm}\        &\hspace{25mm}\  &\hspace{15mm}\       \\
-%\multicolumn{4}{c}{Carbon}                                                    \\
-%  pcJ-1         & 130\red{6.2628}      &  MW5           & 131\red{2.5703}     \\
-%  pcJ-2         & 13\red{00.1446}      &  MW6           & 1310.\red{2681}     \\
-%  pcJ-3         & 130\red{8.9693}      &  MW7           & 1310.6\red{443}     \\
-%  pcJ-4         & 130\red{9.0090}      &  MW8           & 1310.68\red{43}     \\
-%                &                      &                &                     \\
-%\multicolumn{4}{c}{Nitrogen}                                                  \\
-%  pcJ-1         &  -3\red{9.1507}      &  MW5           &  -40.\red{1726}     \\
-%  pcJ-2         &  -40.\red{1619}      &  MW6           &  -40.5\red{204}     \\
-%  pcJ-3         &  -40.5\red{125}      &  MW7           &  -40.53\red{97}     \\
-%  pcJ-4         &  -40.4\red{901}      &  MW8           &  -40.538\red{6}     \\
-%                &                      &                &                     \\
-%\hline
-%\hline
-%\end{tabular}
-%\end{table}
-%\tiny
-%GTO calculations with ORCA\\
-%pcJ-x: Jensen's polarization-consistent (optimized for spin-spin coupling)\\
-%MWx: Multiwavelets with precision $\epsilon=10^{-x}$
-%\end{frame}
+\begin{frame}
+\frametitle{Extension to more nuclei}
+\centering
+\textbf{All orbitals share the same correlation factor}
+\begin{equation}
+    \nonumber
+    \phi_i(r) = R(r) F_i(r)
+\end{equation}
+
+\vspace{10mm}
+
+\textbf{All nuclei are combined into one correlation factor}
+\begin{equation}
+    \nonumber
+    R(r) = \prod_I R_I(r - r_I)
+\end{equation}
+
+\end{frame}
+
+\begin{frame}
+\frametitle{Extension to more nuclei}
+\centering
+\textbf{Isotropic (Fermi-Contact) contribution to HFCC}
+\begin{equation}
+    \nonumber
+    A_{FC} = \Big(\frac{4\pi}{3}\langle S_z \rangle^{-1}\Big)
+    g_eg_N\beta_e\beta_N\rho^{\alpha-\beta}(r_N)
+\end{equation}
+
+\begin{table}
+\textbf{HFCC of O$_2$ molecule (PBE)}\\
+\begin{tabular}{crrrr}
+\hline
+\hline
+\multicolumn{1}{c}{\textbf{Precision}}&
+\multicolumn{1}{c}{$A_{FC}(O1)$}&
+\multicolumn{1}{c}{$A_{FC}(O2)$}&
+\multicolumn{1}{c}{\textbf{GTO}}&
+\multicolumn{1}{c}{$A_{FC}(O)$}\\
+\hline
+\hspace{10mm}\     & \hspace{18mm}\ & \hspace{18mm}\  &         & \hspace{18mm}\ \\
+                   &\multicolumn{2}{c}{R = Identity}  &      pcJ-1 & -17.2393 \\
+               MW4 & -\red{27.9573} &  -\red{9.6738}  &      pcJ-2 & -20.5463 \\
+               MW5 & -\red{11.4636} & -20.\red{9434}  &      pcJ-3 & -21.1093 \\
+               MW6 & -21.\red{3382} & -21.\red{0007}  &      pcJ-4 & -21.2139 \\
+               MW7 & -21.\red{0051} & -21.\red{3342}  &     upcJ-4 & -21.2083 \\
+               MW8 & -21.\red{1106} & -21.\red{2558}  &  aug-pcJ-4 & -21.2371 \\
+                   &                &                 &                       \\
+\hline
+\hline
+\end{tabular}
+\end{table}
+\tiny
+O$_1$ at the origin, O$_2$ distance $|r|=1.2075$\AA\ from the origin\\
+\ \\
+GTO calculations with ORCA\\
+MWx: Multiwavelets with precision $\epsilon=10^{-x}$\\
+pcJ-x: Jensen's polarization-consistent (optimized for spin-spin coupling)
+\end{frame}
+
+\begin{frame}
+\frametitle{Extension to more nuclei}
+\centering
+\textbf{Isotropic (Fermi-Contact) contribution to HFCC}
+\begin{equation}
+    \nonumber
+    A_{FC} = \Big(\frac{4\pi}{3}\langle S_z \rangle^{-1}\Big)
+    g_eg_N\beta_e\beta_N\rho^{\alpha-\beta}(r_N)
+\end{equation}
+
+\begin{table}
+\textbf{HFCC of O$_2$ molecule (PBE)}\\
+\begin{tabular}{crrrr}
+\hline
+\hline
+\multicolumn{1}{c}{\textbf{Precision}}&
+\multicolumn{1}{c}{$A_{FC}(O1)$}&
+\multicolumn{1}{c}{$A_{FC}(O2)$}&
+\multicolumn{1}{c}{\textbf{GTO}}&
+\multicolumn{1}{c}{$A_{FC}(O)$}\\
+\hline
+\hspace{10mm}\     & \hspace{18mm}\ & \hspace{18mm}\  &            & \hspace{18mm}\ \\
+                   &\multicolumn{2}{c}{R = Slater}    &      pcJ-1 & -1\red{7.2393} \\
+               MW4 & -21.\red{8971} & -21.\red{9006}  &      pcJ-2 & -20.\red{5463} \\
+               MW5 & -20.\red{9662} & -20.\red{9805}  &      pcJ-3 & -21.1\red{093} \\
+               MW6 & -21.0\red{824} & -21.0\red{687}  &      pcJ-4 & -21.\red{2139} \\
+               MW7 & -21.07\red{32} & -21.07\red{21}  &     upcJ-4 & -21.\red{2083} \\
+               MW8 & -21.071\red{3} & -21.071\red{7}  &  aug-pcJ-4 & -21.\red{2371} \\
+                   &                &                 &                             \\
+\hline
+\hline
+\end{tabular}
+\end{table}
+\tiny
+O$_1$ at the origin, O$_2$ distance $|r|=1.2075$\AA\ from the origin\\
+\ \\
+GTO calculations with ORCA\\
+MWx: Multiwavelets with precision $\epsilon=10^{-x}$\\
+pcJ-x: Jensen's polarization-consistent (optimized for spin-spin coupling)
+\end{frame}
 
