--- a/talk.tex
+++ b/talk.tex
@@ -43,15 +43,16 @@
 \usebackgroundtemplate{\includegraphics[width=1.02\paperwidth]{figures/ctcc_general.jpg}}
 
 \title{\\\vspace{1cm}
-\large Numerically Converged Hyperfine Coupling Constants}
-%\subtitle{\textcolor{magenta}{My subtitle (if applicable)}}
-\author{Stig Rune Jensen}
+\huge \textcolor{white}{\textbf{Numerically Converged Hyperfine Coupling
+Constants}}}
+
+\author{\\[2mm]Stig Rune Jensen}
 \institute[CTCC]{\\[-6mm]stig.r.jensen@uit.no\\
-[6mm]UiT - The Arctic University of Norway\\[6mm]
-\includegraphics[height=1.5cm]{figures/uio.pdf}\hspace{1cm}
-\includegraphics[height=1.5cm]{figures/sff.pdf}\hspace{1cm}
-\includegraphics[height=1.5cm]{figures/uit.pdf}}
-\date{Hylleraas seminar\\January 19 2018}
+[4mm]UiT - The Arctic University of Norway\\[2mm]
+\includegraphics[height=1.3cm]{figures/uio.pdf}\hspace{1cm}
+\includegraphics[height=1.3cm]{figures/sff.pdf}\hspace{1cm}
+\includegraphics[height=1.3cm]{figures/uit.pdf}}
+\date{\\[-3mm]NMQC workshop\\Berlin-Adlershof, July 27, 2018}
 
 \include{newcommands}
 
@@ -61,13 +62,13 @@
 \setlength{\unitlength}{\textwidth}
 
 {
-\usebackgroundtemplate{\includegraphics[width=1.02\paperwidth]{figures/ctcc_forside.jpg}}
+\usebackgroundtemplate{\includegraphics[width=1.02\paperwidth]{figures/hyller.jpg}}
 \maketitle
 }
 
 \include{introduction}
 \include{hfcc}
-%\include{hsf}
+\include{hsf}
 \include{nemo}
 \include{conclusions}
 
